# inspiration

./: CMakeLists.txt  Makefile  README.md  engineer.cpp  engineer.h  main.cpp  person.cpp  person.h  regex_practice.cpp  regex_practice.h
